[package]
name = "valkyrie"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
socket2 = { version = "0.6.1", features = ["all"] }
crossbeam-channel = "0.5"
libc = "0.2"
num_cpus = "1.16"
affinity = "0.1.2"
assert_cmd = "2"
predicates = "3"
